--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </form>
     </div>
     </header>
-<div class="features">
+<!-- <div class="features"> -->
     <div class="second-slide">
         <div class="ss-content">
             <h1>Enjoy on your TV</h1>
@@ -78,7 +78,7 @@
             <img src="image/children.png">
         </div>
     </div>
-</div>
+<!-- </div> -->
 
 <div class="faq">
     <h2>Frequently Asked Questions</h2>
