--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
         </div>
         <div class="ss-img">
-            <video width="362" height="450" autoplay loop>
+            <video width="362" height="450" autoplay loop muted>
                 <source src="image/Untitled ‑ Made with FlexClip.mp4">
             </video>
         </div>
@@ -64,7 +64,7 @@
             <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
         <div class="fs-img">
-            <video width="362" height="450" autoplay loop>
+            <video width="362" height="450" autoplay loop muted>
                 <source src="image/2nd clip.mp4">
             </video>
         </div>
